@@ -16,6 +16,9 @@ Features:
 
 Bug fixes and non-featureful changes:
 
+ * Fix upgrades/to_0_13_0.py to actually migrate all the mailing lists
+   (slinkp et al.)
+
  * Wiki history "Last edit performed by..." now correctly shows the
    last edit, not the first. (slinkp) (ticket #2704)
 
